# 3DEngine

./: .gitignore  .travis.yml  LICENSE  LICENSE.md  README.md  TODO.md
assets/test_files/misc/: Bezier.xml  Diff.xml  PointLight.xml  SpecularLight.xml  test.xml  test3.xml
assets/test_files/solar_system/: comet.patch
src/: CMakeLists.txt
src/Engine/: CMakeLists.txt  box.txt  engine.c  example.xml  pyramid.txt  scene.xml
src/Generator/: CMakeLists.txt  TODO.md  generator.c
testFiles/: comet.3d  planet.3d  scene.xml  solarSystem.xml  test2.xml  test4.xml  test5.xml  testAmbi.xml  testCatmull.xml  testDirectionalLight.xml  testEmis.xml  testMaterials.xml  testRotate360.xml  testSpotLight.xml
testFiles/solarSystem/: comet.3d  engine  planet.3d  ring.3d  solarSystem.xml  solarSystem2.xml  sphere.3d
tex/: relatorio.tex
